infra/storage/minio/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app: minio
    app.kubernetes.io/instance: minio
    app.kubernetes.io/managed-by: Flux
    app.kubernetes.io/name: minio
  name: minio
  namespace: storage
spec:
  rules:
    - host: "minio.home.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - secretName: tls-cert
      hosts:
        - "grafana.home.${SECRET_DOMAIN}"
